# Blackhole

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  README.md  TODO.md  cliff.toml  codecov.yml  committed.toml  config.example.toml  entrypoint.bash  entrypoint.sh  release.toml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  build.yml  changelog.yml  client.yml  clippy.yml  code-coverage.yml  codeql-analysis.yml  codeql.yml  commit.yml  coverage.yml  release.yml  server.yml  test-pr.yml  trivy.yml
benches/: benchmarks.rs  test.txt
client/: .dockerignore  .eslintrc.cjs  .prettierrc  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.ts
client/src/: app.d.ts  app.html  types.ts
client/src/lib/components/: Navigation.svelte
client/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  Notification.svelte
client/src/routes/api/: +server.ts
client/src/routes/api/[...api]/: +server.ts
client/src/routes/config/: +page.svelte
client/src/routes/logs/: +page.svelte  Record.svelte  Request.svelte
client/src/routes/stats/: +page.svelte
examples/prometheus/: blackhole.toml  docker-compose.yml  prometheus.yml
examples/traefik/: docker-compose.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dns.rs
lib/: src.rs
lib/api/: mod.rs  server.rs
lib/cache/: mod.rs
lib/config/: mod.rs
lib/dns/: header.rs  mod.rs  packet.rs  qualified_name.rs  question.rs  server.rs  traits.rs
lib/filter/: mod.rs  rules.rs
lib/metrics/: mod.rs
lib/schedule/: mod.rs
lib/server/: handler.rs  mod.rs  tcp.rs  udp.rs
lib/statistics/: mod.rs
src/: cli.rs  main.rs
