[package]
name = "blackhole"
version = "0.6.2"
edition = "2021"
publish = true
authors = ["pyxxil <pyxxil@pyxxilated.studio>"]
license = "Apache-2.0"
description = "A DNS Filtering Server"
homepage = "https://github.com/pyxxil/blackhole"
repository = "https://github.com/pyxxil/blackhole"

[lib]
name = "blackhole"
path = "lib/src.rs"

[[bin]]
name = "blackhole"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
bstr = { version = "1", default-features = false, features = ["alloc", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", default-features = false, features = ["derive", "help", "std", "usage"] }
const_format = "0.2"
humantime-serde = "1"
nom = "7"
num-traits = { version = "0.2", default-features = false }
rayon = "1"
rustc-hash = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["net", "macros", "parking_lot", "rt-multi-thread", "time", "tracing"] }
toml = "0.5"
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "parking_lot", "smallvec", "tracing-log"] }
ureq = { version = "2", default-features = false, features = ["gzip", "tls"] }
warp = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = ["html_reports", "plotters", "real_blackbox"] }
pretty_assertions = "1"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"
codegen-units = 1
panic = "abort"
