[package]
name = "blackhole"
version = "0.9.0"
edition = "2021"
publish = true
authors = ["pyxxil <pyxxil@pyxxilated.studio>"]
license = "Apache-2.0"
description = "A DNS Filtering Server"
homepage = "https://github.com/pyxxil/blackhole"
repository = "https://github.com/pyxxil/blackhole"

[lib]
name = "blackhole"
path = "lib/src.rs"

[[bin]]
name = "blackhole"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
async-trait = "0.1"
bstr = { version = "1", default-features = false, features = ["alloc"] }
clap = { version = "4", default-features = false, features = [
    "derive",
    "help",
    "std",
    "usage",
] }
const_format = "0.2"
futures = "0.3"
humantime-serde = "1"
nom = "7"
rayon = "1"
regex = "1"
rustc-hash = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
tokio = { version = "1", default-features = false, features = [
    "net",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
toml = "0.7.2"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "fmt",
    "parking_lot",
    "smallvec",
    "tracing-log",
] }
trust-dns-proto = { version = "0.22", default-features = false, features = [
    "dns-over-https-rustls",
    "dns-over-rustls",
    "dnssec-ring",
    "serde-config",
] }
trust-dns-resolver = { version = "0.22", default-features = false, features = [
    "dns-over-https-rustls",
    "dns-over-rustls",
    "dnssec-ring",
    "serde-config",
] }
trust-dns-server = { version = "0.22", default-features = false, features = [
    "dns-over-https-rustls",
    "dns-over-rustls",
    "dnssec-ring",
] }
ureq = { version = "2", default-features = false, features = [
    "brotli",
    "gzip",
    "tls",
] }
warp = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = [
    "html_reports",
    "plotters",
    "real_blackbox",
] }
pretty_assertions = "1"
serde_json = "1"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"
codegen-units = 1
panic = "abort"
