[package]
name = "blackhole"
version = "0.13.0"
edition = "2021"
publish = true
authors = ["pyxxil <pyxxil@pyxxilated.studio>"]
license = "Apache-2.0"
description = "A DNS Filtering Server"
homepage = "https://github.com/pyxxil/blackhole"
repository = "https://github.com/pyxxil/blackhole"

[lib]
name = "blackhole"
path = "lib/src.rs"

[[bin]]
name = "blackhole"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
async-trait = "0.1"
chumsky = "=1.0.0-alpha.4"
clap = { version = "4", default-features = false, features = [
    "derive",
    "help",
    "std",
] }
futures = "0.3"
humantime-serde = "1"
lru-cache = "0.1"
prometheus-client = "0.21.1"
rayon = "1"
regex = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"
tokio = { version = "1", default-features = false, features = [
    "net",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
toml = "0.8.0"
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "fmt",
    "parking_lot",
    "tracing-log",
] }
trust-dns-proto = { version = "0.23", default-features = false, features = [
    "dns-over-https-rustls",
    "dns-over-rustls",
    "dnssec-ring",
    "serde-config",
] }
trust-dns-resolver = { version = "0.23", default-features = false, features = [
    "dns-over-https-rustls",
    "dns-over-rustls",
    "dnssec-ring",
    "serde-config",
] }
trust-dns-server = { version = "0.23", default-features = false, features = [
    "dns-over-https-rustls",
    "dns-over-rustls",
    "dnssec-ring",
] }
ureq = { version = "2", default-features = false, features = [
    "brotli",
    "gzip",
    "tls",
] }
warp = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
    "html_reports",
    "plotters",
    "real_blackbox",
] }
pretty_assertions = "1"
serde_json = "1"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"
codegen-units = 1
panic = "abort"
